--- a/Hello.html
+++ b/Hello.html
@@ -4,6 +4,20 @@
         <title>HELLO WORLD</title>
     </head>
     <body>
+        <p><a href="#A">Jump to James</a></p>
+        <p><a href="#B">Jump to Bob</a></p>
         <p>This is pages made by Zero</p>
+        <p><a href="http://tim.codegym.vn/" target="_blank">
+            <img src="1625471042.png" style="border:0;">
+        </a></p>
+        <h1 id="A">James Codegym</h1>
+        <p><a href="http://james.codegym.vn/" target="_blank">JAMES
+            
+        </a></p>
+        <h1 id="B">Bob Codegym</h1>
+        <p><a href="http://bob.codegym.vn/" target="_blank" >BOB</a></p>
+        <hr>
+        <p>is a Joke</p>
+        
     </body>
 </html>
