--- a/Hello.html
+++ b/Hello.html
@@ -2,20 +2,45 @@
 <html>
     <head>
         <title>HELLO WORLD</title>
+        <style>
+            ul {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                overflow: hidden;
+                background-color: #3d3d3d;
+            }
+
+            li {
+                float: left;
+            }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            align-items: center;
+            padding: 10px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #111111;
+        }
+
+        </style>
     </head>
     <body>
-        <p><a href="#A">Jump to James</a></p>
-        <p><a href="#B">Jump to Bob</a></p>
         <p>This is pages made by Zero</p>
-        <p><a href="http://tim.codegym.vn/" target="_blank">
-            <img src="1625471042.png" style="border:0;">
-        </a></p>
-        <h1 id="A">James Codegym</h1>
-        <p><a href="http://james.codegym.vn/" target="_blank">JAMES
-            
-        </a></p>
-        <h1 id="B">Bob Codegym</h1>
-        <p><a href="http://bob.codegym.vn/" target="_blank" >BOB</a></p>
+        <ul>
+            <li><a href="http://tim.codegym.vn/" target="_blank">
+                <img src="1625471042.png" alt="Codegym_sologan" style="width:50px; height:25px; border:0; margin: 0 ;"> 
+                Home</a></li>
+            <li><a href="http://james.codegym.vn/" target="_blank">James</a></li>
+            <li><a href="http://bob.codegym.vn/" target="_blank">Bob</a></li>
+        </ul>
+
+            <img src="1625471042.png" alt="Codegym_sologan" style="width: 300px; height: 150px; border: 0; align-items: center; display: block; margin: 0 auto;" >
         <hr>
         <p>is a Joke</p>
         
