--- a/timetable.html
+++ b/timetable.html
@@ -46,34 +46,38 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th rowspan="2">Thứ</th>
-            <th colspan="2">Hoạt động</th>
-        </tr>
-        <tr>
-            <th>Sáng</th>
-            <th>Chiều</th>
-        </tr>
-        <tr>
-            <td>Thứ Hai</td>
-            <td>Thể dục</td>
-            <td>HD trò chơi mới</td>
-        </tr>
-        <tr>
-            <td>Thứ 3</td>
-            <td>Nhận biết tập nói</td>
-            <td>Rèn nề nếp, kĩ năng sống</td>
-        </tr>
-        <tr>
-            <td>Thứ 4</td>
-            <td>Âm nhạc</td>
-            <td>Vui chơi</td>
-        </tr>
-        <tr>
-            <td>Thứ 4</td>
-            <td>Văn học</td>
-            <td>Nhận biết các giá trị sống</td>
-        </tr>
+        <thead>
+            <tr>
+                <th rowspan="2">Thứ</th>
+                <th colspan="2">Hoạt động</th>
+            </tr>
+            <tr>
+                <th>Sáng</th>
+                <th>Chiều</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Thứ Hai</td>
+                <td>Thể dục</td>
+                <td>HD trò chơi mới</td>
+            </tr>
+            <tr>
+                <td>Thứ 3</td>
+                <td>Nhận biết tập nói</td>
+                <td>Rèn nề nếp, kĩ năng sống</td>
+            </tr>
+            <tr>
+                <td>Thứ 4</td>
+                <td>Âm nhạc</td>
+                <td>Vui chơi</td>
+            </tr>
+            <tr>
+                <td>Thứ 4</td>
+                <td>Văn học</td>
+                <td>Nhận biết các giá trị sống</td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
