--- a/StudentForm.html
+++ b/StudentForm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="" method="get">
-        <table>
+        <table border="1">
             <caption style="background-color: orangered; color: azure;">Sở thích của bạn</caption>
             <tbody>
                 <tr>
@@ -45,8 +45,9 @@
             </tfoot>
         </table>
     </form>
+    <form action="" method="get">
         <table style="background-color: #f5f58b;">
-            <caption style="background-color: #00ffff; color: #0000ff;">ĐĂNG KÝ HỌC VIÊN</caption>
+            <caption style="background-color: #00ffff; color: #0000ff; text-align: left">ĐĂNG KÝ HỌC VIÊN</caption>
             <tbody>
                 <tr>
                     <td style="width: 100px; color: #0000ff;" >Họ và tên</td>
@@ -94,8 +95,6 @@
                 </tr>
             </tfoot>
         </table>
-    <form>
-
     </form>
 </body>
 </html>
