--- a/Chess&Calendar/Chess.html
+++ b/Chess&Calendar/Chess.html
@@ -31,24 +31,29 @@
         #B td:nth-child(odd){
             background-color: white;
         }
+        #bottom {
+            vertical-align: bottom;
+        }
     </style>
 </head>
-<body id="orange">
+<body>
+    <fieldset id="orange" style="width: 520px; height: 520px;">
     <table>
+        
         <tr>
             <td></td>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-            <td>4</td>
-            <td>5</td>
-            <td>6</td>
-            <td>7</td>
-            <td>8</td>
+            <td id="bottom">1</td>
+            <td id="bottom">2</td>
+            <td id="bottom">3</td>
+            <td id="bottom">4</td>
+            <td id="bottom">5</td>
+            <td id="bottom">6</td>
+            <td id="bottom">7</td>
+            <td id="bottom">8</td>
             
         </tr>
         <tr id="A">
-            <td style="background-color: #ff9d00;">A</td>
+            <td align="right" style="background-color: #ff9d00;">A</td>
             <td></td>
             <td></td>
             <td></td>
@@ -59,7 +64,7 @@
             <td></td>
         </tr>
         <tr id="B">
-            <td style="background-color: #ff9d00;">B</td>
+            <td align="right" style="background-color: #ff9d00;">B</td>
             <td></td>
             <td></td>
             <td></td>
@@ -70,7 +75,7 @@
             <td></td>
         </tr>
         <tr id="A">
-            <td style="background-color: #ff9d00;">C</td>
+            <td align="right" style="background-color: #ff9d00;">C</td>
             <td></td>
             <td></td>
             <td></td>
@@ -81,7 +86,7 @@
             <td></td>
         </tr>
         <tr id="B">
-            <td style="background-color: #ff9d00;">D</td>
+            <td align="right" style="background-color: #ff9d00;">D</td>
             <td></td>
             <td></td>
             <td></td>
@@ -92,7 +97,7 @@
             <td></td>
         </tr>
         <tr id="A">
-            <td style="background-color: #ff9d00;">E</td>
+            <td align="right" style="background-color: #ff9d00;">E</td>
             <td></td>
             <td></td>
             <td></td>
@@ -103,7 +108,7 @@
             <td></td>
         </tr>
         <tr id="B">
-            <td style="background-color: #ff9d00;">F</td>
+            <td align="right" style="background-color: #ff9d00;">F</td>
             <td></td>
             <td></td>
             <td></td>
@@ -114,7 +119,7 @@
             <td></td>
         </tr>
         <tr id="A">
-            <td style="background-color: #ff9d00;">G</td>
+            <td align="right" style="background-color: #ff9d00;">G</td>
             <td></td>
             <td></td>
             <td></td>
@@ -125,7 +130,7 @@
             <td></td>
         </tr>
         <tr id="B">
-            <td style="background-color: #ff9d00;">H</td>
+            <td align="right" style="background-color: #ff9d00;">H</td>
             <td></td>
             <td></td>
             <td></td>
@@ -136,5 +141,6 @@
             <td></td>
         </tr>
     </table>
+</fieldset>
 </body>
 </html>
