add week 2 and fix week 1

--- a/Week_1/tablesimple.html
+++ b/Week_1/tablesimple.html
@@ -16,7 +16,7 @@
             text-align: left;
             padding: 8px;
         }
-        tr:nth-child(even) {
+        #A tr:nth-child(even) {
             background-color: #dddddd;
         }
     </style>
@@ -24,13 +24,13 @@
 <body>
     <table>
         <thead>
-            <tr>
+            <tr style="background-color: #dddddd;">
                 <th>Company</th> 
                 <th>Contact</th> 
                 <th>Country</th> 
             </tr>
         </thead>
-        <tbody>
+        <tbody id="A">
             <tr>
                 <td>Alfreds Futterkiste</td>
                 <td>Maria Anders</td>
