add first function

--- a/Week_2/firstfunction.html
+++ b/Week_2/firstfunction.html
@@ -12,11 +12,20 @@
     <button type="button" id="click" onclick="showmessage()">Click here!</button>
 
     <script>
-        function showmessage(){
-            alert("Xin chào!");
+        // function showmessage() {
+        //     alert("Xin chào!");
+        // }
+        
+        function showmessage() {
+            document.getElementById("click").innerHTML= "Xin Chào! Bất ngờ chưa??";
         }
-        // function showmessage(){
-        //     document.getElementById("click").innerHTML= "Xin Chào! Bất ngờ chưa??";
+
+        // function showmessage() {
+        //     document.write("Xin chào! mất hết rồi");
+        // }
+
+        // function showMessage(){
+        //     console.log('Xin chào!');
         // }
     </script>
 </body>
