--- a/Week_1/Chess&Calendar/Calendar.html
+++ b/Week_1/Chess&Calendar/Calendar.html
@@ -28,15 +28,15 @@
             font-weight: bolder;
         }
 
-        #yellow {
+        .yellow {
             background-color: #ffb700;
             color: white;
         }
-        #red {
+        .red {
             background-color: #ff0000;
             color: white;
         }
-        #blue {
+        .blue {
             background-color: #0000ff;
             color: white;
         }
@@ -47,13 +47,13 @@
         <caption>Tháng 10 - October</caption>
         <thead>
             <tr>
-                <th id="red">C.Nhật</th>
-                <th id="yellow">T.Hai</th>
-                <th id="yellow">T.Ba</th>
-                <th id="yellow">T.Tư</th>
-                <th id="yellow">T.Năm</th>
-                <th id="yellow">T.Sáu</th>
-                <th id="blue">T.Bảy</th>
+                <th class="red">C.Nhật</th>
+                <th class="yellow">T.Hai</th>
+                <th class="yellow">T.Ba</th>
+                <th class="yellow">T.Tư</th>
+                <th class="yellow">T.Năm</th>
+                <th class="yellow">T.Sáu</th>
+                <th class="blue">T.Bảy</th>
             </tr>
             <tr>
                 <th style="color: #ff0000;">Sun</th>
