--- a/Week_2/Calculator/calculator.html
+++ b/Week_2/Calculator/calculator.html
@@ -16,7 +16,7 @@
                     <td colspan="4"><input class="result" type="text" id="result" disabled></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><input class="col2" type="submit" value="C"></td>
+                    <td colspan="2"><input class="col2" type="submit" value="AC"></td>
                     <td><input type="button" value="DEL" onclick="backspace()"</td>
                     <td><input type="button" value="/" onclick="Input(value)"></td>
                 </tr>
@@ -45,7 +45,7 @@
                 </tr>
             </tbody>
         </table>
-        <label id="cache">1</label>
+        <label id="cache">0</label>
     </form>
 
     <script src="calculator.js"></script>
