--- a/Week_2/IF_Else_part2/Bai11.html
+++ b/Week_2/IF_Else_part2/Bai11.html
@@ -63,7 +63,7 @@
     </table>
 
     <script>
-        let a;
+        let a = 0;
         do {
             a = parseInt(prompt("Nhập Thu nhập tính thuế/tháng(triệu đồng):", 0));
         }
