--- a/Week_2/If_Else/Bai3.html
+++ b/Week_2/If_Else/Bai3.html
@@ -13,11 +13,11 @@
 
         if (x == 0) {
             alert ("Số này là số 0");
-        } else
-            if (x > 0) {
+        } 
+        else if (x > 0) {
                 alert ("Số này là số lớn hơn 0");
-            } else
-                if (x < 0) {
+            } 
+            else if (x < 0) {
                     alert ("Số này là số bé hơn 0");
                 }
     </script>
