--- a/Week_2/Game/GamePuzzle.html
+++ b/Week_2/Game/GamePuzzle.html
@@ -5,20 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Puzzle</title>
+    <link rel="stylesheet" href="js_css/css.css">
 </head>
 <body>
-    <div>
-        <table>
+    <div id="div" class="">
+        <table class="game">
             <tbody>
-                <tr>
-                    <td><img id="1" src="Puzzle/bear/img-1.png"></td>
-                    <td><img id="2" src="Puzzle/bear/img-2.png"></td>
-                    <td><img id="3" src="Puzzle/bear/img-3.png"></td>
-                    <td><img id="4" src="Puzzle/bear/img-4.png"></td>
-                    <td><img id="5" src="Puzzle/bear/img-5.png"></td>
-                </tr>
+                    <tr>
+                        <td><img id="1" src="Puzzle/bear/img-1.png"></td>
+                        <td><img id="2" src="Puzzle/bear/img-2.png"></td>
+                        <td><img id="3" src="Puzzle/bear/img-3.png"></td>
+                        <td><img id="4" src="Puzzle/bear/img-4.png"></td>
+                        <td><img id="5" src="Puzzle/bear/img-5.png"></td>
+                    </tr>
             </tbody>
         </table>
+    </div>
+
+    <div>
+        <label id="result" class="win"></label>
     </div>
     <script src="js_css/gamepuzzle.js"></script>
 </body>
