fix game puzzle

--- a/Week_2/Game/GamePuzzle.html
+++ b/Week_2/Game/GamePuzzle.html
@@ -12,11 +12,11 @@
         <table class="game">
             <tbody>
                     <tr>
-                        <td><img id="1" src="Puzzle/bear/img-1.png"></td>
-                        <td><img id="2" src="Puzzle/bear/img-2.png"></td>
-                        <td><img id="3" src="Puzzle/bear/img-3.png"></td>
-                        <td><img id="4" src="Puzzle/bear/img-4.png"></td>
-                        <td><img id="5" src="Puzzle/bear/img-5.png"></td>
+                        <td><img id="1" src=""></td>
+                        <td><img id="2" src=""></td>
+                        <td><img id="3" src=""></td>
+                        <td><img id="4" src=""></td>
+                        <td><img id="5" src=""></td>
                     </tr>
             </tbody>
         </table>
