fix game and add forBT

--- a/Week_2/IF_Else_part2/Bai10.html
+++ b/Week_2/IF_Else_part2/Bai10.html
@@ -64,7 +64,7 @@
             <tbody>
                 <tr>
                     <td>Nhập chỉ số điện:</td>
-                    <td><input id="input" type="text"></td>
+                    <td><input id="input" type="number"></td>
                     <td><input id="btn" type="button" value="Tính"></td>
                     <td><label id="result"></label></td>
                 </tr>
