--- a/Week_2/Game/GamePuzzle.html
+++ b/Week_2/Game/GamePuzzle.html
@@ -11,7 +11,7 @@
     <div id="div" class="">
         <table class="game">
             <tbody>
-                    <tr>
+                    <tr id="bgrwin">
                         <td><img id="1" src=""></td>
                         <td><img id="2" src=""></td>
                         <td><img id="3" src=""></td>
