--- a/Week_2/Calculator/calculator.html
+++ b/Week_2/Calculator/calculator.html
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <td colspan="2"><input class="col2" type="submit" value="AC"></td>
-                    <td><input type="button" value="DEL" onclick="backspace()"</td>
+                    <td><input type="button" value="DEL" onclick="backspace()"></td>
                     <td><input type="button" value="/" onclick="Input(value)"></td>
                 </tr>
                 <tr>
