--- a/Week_2/IF_Else_part2/Bai11.html
+++ b/Week_2/IF_Else_part2/Bai11.html
@@ -65,7 +65,7 @@
     <script>
         let a = 0;
         do {
-            a = parseInt(prompt("Nhập Thu nhập tính thuế/tháng(triệu đồng):", 0));
+            a = parseFloat(prompt("Nhập Thu nhập tính thuế/tháng(triệu đồng):", 0));
         }
         while (a < 0)
         console.log(a);
