--- a/Week_3/primeNumber.html
+++ b/Week_3/primeNumber.html
@@ -18,6 +18,7 @@
             if (N == 2) {
                 text += `${N}`;
                 N++;
+                count ++;
             }
             if (prime(N)) {
                 text += `, ${N}`;
