--- a/Week_3/Loop2/Bai6.html
+++ b/Week_3/Loop2/Bai6.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bài 6</title>
 </head>
+
 <body>
 
     <script>
-        let text = "<pre>";
+        let space = "&nbsp&nbsp";
+        let text = "<p>";
         for (let i = 1; i <= 6; i++) {
             for (let j = 1; j <=7; j++) {
-                text += (i == 1 && j == 1) || (i == 1 && j == 4) || 
+                text += (i == 1 && j == 1) || (i == 1 && j == 4) ||
                         (i == 1 && j == 7) || (i == 4 && j == 1) ||
                         (i == 4 && j == 7) || (i == 5 && j == 1) ||
                         (i == 5 && j == 2) || (i == 5 && j == 6) ||
                         (i == 5 && j == 7) || (i == 6 && j == 1) ||
                         (i == 6 && j == 2) || (i == 6 && j == 3) ||
                         (i == 6 && j == 5) || (i == 6 && j == 6) ||
-                        (i == 6 && j == 7) ? " " : "*";
+                        (i == 6 && j == 7) ? space : "*";
             }
             text += "<br>";
         }
-        text += "</pre>";
+        text += "</p>";
 
         document.write(text);
+
+        document.write(`${space}***${space}${space}${space}***${space}<br>`);
+        document.write(`*****${space}*****<br>`);
+        document.write(`***********<br>`);
+        document.write(`${space}*********${space}<br>`);
+        document.write(`${space}${space}*******${space}${space}<br>`);
+        document.write(`${space}${space}${space}*****${space}${space}${space}<br>`);
+        document.write(`${space}${space}${space}${space}***${space}${space}${space}${space}<br>`);
+        document.write(`${space}${space}${space}${space}${space}*${space}${space}${space}${space}${space}<br>`);
     </script>
 </body>
+
 </html>
