--- a/Week_3/Function_1/Bai1.html
+++ b/Week_3/Function_1/Bai1.html
@@ -7,8 +7,12 @@
     <title>Bài 1</title>
 </head>
 <body>
-    
+    <button onclick="alertMessage()">Click here!</button>
 
-    <script src="Bt1.js"></script>
+    <script>
+        function alertMessage() {
+            alert("Xin chao");
+        }
+    </script>
 </body>
 </html>
